<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    >


    <TextView
        android:text="@string/setContactNobody"
        android:textSize="20dp"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/nobody" />

    <TextView
        android:text="@string/setContactCustom"
        android:textSize="20dp"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/customContacts" />

    <TextView
        android:text="@string/editContacts"
        android:textSize="20dp"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/editList" />
</LinearLayout>
